crates/oxc_react_compiler/tests/snapshots/reactive-scope-grouping.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactive-scope-grouping.js
---
import { c as _c } from "react/compiler-runtime";
function foo() {
	const $ = _c(1);
	let x;
	if ($[0] === Symbol.for("react.memo_cache_sentinel")) {
		x = {};
		const y = [];
		const z = {};
		y.push(z);
		x.y = y;
		$[0] = x;
	} else {
		x = $[0];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: [],
	isComponent: false
};
