crates/oxc_react_compiler/tests/snapshots/reactive-scopes-if.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactive-scopes-if.js
---
import { c as _c } from "react/compiler-runtime";
function foo(a, b, c) {
	const $ = _c(8);
	let x;
	if ($[0] !== a || $[1] !== b || $[2] !== c) {
		x = [];
		if (a) {
			let y;
			if ($[4] !== b) {
				y = [];
				y.push(b);
				$[4] = b;
				$[5] = y;
			} else {
				y = $[5];
			}
			let t0;
			if ($[6] !== y) {
				t0 = <div>{y}</div>;
				$[6] = y;
				$[7] = t0;
			} else {
				t0 = $[7];
			}
			x.push(t0);
		} else {
			x.push(c);
		}
		$[0] = a;
		$[1] = b;
		$[2] = c;
		$[3] = x;
	} else {
		x = $[3];
	}
	return x;
}
export const FIXTURE_ENTRYPOINT = {
	fn: foo,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
