crates/oxc_react_compiler/tests/snapshots/reactive-scopes.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactive-scopes.js
---
import { c as _c } from "react/compiler-runtime";
function f(a, b) {
	const $ = _c(3);
	let t0;
	if ($[0] !== a.length || $[1] !== b) {
		const x = [];
		if (a.length === 1) {
			if (b) {
				x.push(b);
			}
		}
		t0 = <div>{x}</div>;
		$[0] = a.length;
		$[1] = b;
		$[2] = t0;
	} else {
		t0 = $[2];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: f,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
