crates/oxc_react_compiler/tests/snapshots/reactivity-analysis-interleaved-reactivity.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/reactivity-analysis-interleaved-reactivity.js
---
import { c as _c } from "react/compiler-runtime";
function Component(props) {
	const $ = _c(2);
	let t0;
	if ($[0] !== props.b) {
		const a = {};
		const b = [];
		b.push(props.b);
		a.a = null;
		const c = [a];
		t0 = [c, a];
		$[0] = props.b;
		$[1] = t0;
	} else {
		t0 = $[1];
	}
	return t0;
}
export const FIXTURE_ENTRYPOINT = {
	fn: Component,
	params: ["TodoAdd"],
	isComponent: "TodoAdd"
};
