crates/oxc_react_compiler/tests/snapshots/readonly-object-method-calls.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/readonly-object-method-calls.js
---
import { c as _c } from "react/compiler-runtime";
import { useFragment } from "shared-runtime";
function Component(props) {
	const $ = _c(4);
	const user = useFragment(graphql`
      fragment Component_user on User {
        name
      }
    `, props.user);
	let posts;
	if ($[0] !== user.timeline.posts.edges.nodes) {
		posts = user.timeline.posts.edges.nodes.map(_temp);
		posts.push({});
		const count = posts.length;
		foo(count);
		$[0] = user.timeline.posts.edges.nodes;
		$[1] = posts;
	} else {
		posts = $[1];
	}
	let t0;
	if ($[2] !== posts) {
		t0 = <>{posts}</>;
		$[2] = posts;
		$[3] = t0;
	} else {
		t0 = $[3];
	}
	return t0;
}
function _temp(node) {
	return <Post post={node} />;
}
